inbox workflow mobile aligniment issues. (#282)

--- a/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/components/MultiSelectDropdown/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-ui-kit-dev/src/components/MultiSelectDropdown/index.scss
@@ -1,3 +1,17 @@
 .dropdown {
   box-sizing: border-box;
 }
+@media only screen and (max-width: 768px) {
+  div#menu- { div[role="document"]{
+  width:300px;
+  overflow-y: scroll;
+  max-height: 40% !important;
+  top:40% !important;
+  }
+  }}
+  
+  div#menu- { div[role="document"]{
+    width:300px;
+    overflow-y: scroll;
+    height: 187px;
+    }}
